--- a/build.yaml
+++ b/build.yaml
@@ -20,4 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: nice_view_adapter
+    shield: nice_view_adapter corne_left nice_view
+  - board: nice_nano_v2
+    shield: nice_view_adapter corne_right nice_view
