--- a/config/nice_view_adapter.conf
+++ b/config/nice_view_adapter.conf
@@ -1,2 +1,9 @@
 # Disable OLED
-CONFIG_SSD1306=n
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
+
+CONGIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y 
+
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_ICON=y
+CONFIG_ZMK_KEYBORD_NAME="SivaBoard"
