--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: nice_view_adapter corne_left nice_view
+    shield: corne_left nice_view
   - board: nice_nano_v2
-    shield: nice_view_adapter corne_right nice_view
+    shield: corne_right nice_view
